<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/subName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_date"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/subDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:inputType="date"
        android:maxLength="10"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_price"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/subPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:inputType="numberDecimal"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_note"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/subNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:inputType="text"
        android:textSize="18sp" />

</LinearLayout>